feat: add docker files

--- a/sample.env
+++ b/sample.env
@@ -1,6 +1,14 @@
-HOST=
-PORT=
-DB_USER=
-DB_PW=
-DB_NAME=
-SSL=
+# Database Configuration
+DB_HOST=db
+DB_PORT=5432
+DB_USER=postgres
+DB_PASSWORD=postgres
+DB_NAME=urlshortener
+
+# API Configuration
+PORT=8080
+BASE_URL=http://localhost:8080
+
+# Optional Configuration
+# SHORTCODE_LENGTH=6
+# RATE_LIMIT=100
